--- a/anal_descr_script.ipynb
+++ b/anal_descr_script.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Avances: Análisis descriptivo de datos"
+    "# Análisis descriptivo de datos"
    ]
   },
   {
